# CS2-analytics

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  GITHUB_ISSUES_README.md  ISSUE_CREATION_GUIDE.md  QUICK_REFERENCE.md  README.md  README_GITHUB_ISSUES.md  agents.md  config.py  coverage.json  create_github_issues.py  create_issues.bat  data_storage.py  db_connection.py  docker-compose.yml  hltv_matches.csv  hltv_matches.json  logger_config.py  main.py  main_scraper.py  manage_db.py  match_scraper.py  parser  player_scraper.py  preflight_check.py  pyproject.toml  requirements.txt  run_api.py  scraper.py  setup_github_issues.py
.github/: PULL_REQUEST_TEMPLATE.md  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation_task.yml  implementation_task.yml  maintenance_task.yml
.github/workflows/: ci.yml  deploy-frontend.yml  frontend-ci.yml  manual-pipeline-worker.yml
api/: __init__.py  main.py
api/routes/: __init__.py  players.py
api/schemas/: __init__.py  player.py
api/services/: __init__.py  player_service  player_service.py
backend/: main.py
config/: __init__.py  config.py
cs2_analytics/: __init__.py  alembic.ini  cli.py  exceptions.py
cs2_analytics/alembic/: __init__.py  env.py
cs2_analytics/config/: __init__.py  config.py
cs2_analytics/controllers/: __init__.py  demo_controller.py  map_controller.py  match_controller.py  results_controller.py  retry_utils.py
cs2_analytics/ingestion_state/: __init__.py  base_ingestion_state.py  demo_ingestion_state.py  map_ingestion_state.py  match_ingestion_state.py
cs2_analytics/models/: __init__.py  map.py  match.py  player.py
cs2_analytics/parsers/: __init__.py  demo_parser.py  map_parser.py  match_parser.py  player_analytics.py
cs2_analytics/pipeline/: __init__.py  cs2_pipeline.py
cs2_analytics/queues/: __init__.py  base_scrape_queue.py  demo_ingestion_state.py  demo_scrape_queue.py  map_ingestion_state.py  map_scrape_queue.py  match_ingestion_state.py  match_scrape_queue.py
cs2_analytics/scrapers/: __init__.py  demo_scraper.py  map_scraper.py  match_scraper.py  results_scraper.py
cs2_analytics/services/: player_analytics.py
cs2_analytics/stage_services/: __init__.py  demo_stage_service.py  map_stage_service.py  match_stage_service.py  results_stage_service.py  stage_result.py
cs2_analytics/storage/: __init__.py  database.py  db_instance.py  (+9 more)
database/: initialize_db.py
dbt/: .user.yml  dbt_project.yml  packages.yml  profiles.yml
docs/: architecture.md  backlog.md  conventions.md  copilot_context.md  current_focus.md  database_schema.md  dbt_models.md  demo_pipeline.md  deployment.md  frontend_backlog.md  ingestion_lifecycle.md  pipeline_overview.md  schema_target_pre_dbt.md  workflow.md
frontend/: README.md  app.py  index.html  package-lock.json  package.json  vite.config.ts
log_manager/: __init__.py  logger_config.py
models/: __init__.py  map.py  match.py  player.py
parsers/: __init__.py  demo_parser.py  map_parser.py  match_parser.py
parsing/: demo_parser.py  parser  player_analytics.py
pipeline/: __init__.py  cs2_pipeline.py
scrapers/: __init__.py  demo_scraper.py  map_scraper.py  match_scraper.py  results_scraper.py
scraping/: __init__.py  demo_scraper.py  match_scraper.py  player_scraper.py  results_scraper.py
scripts/: __init__.py  debug_map_ingestion.py  debug_map_scraper.py  debug_match_ingestion.py  debug_match_parser.py  deployment_smoke.py  generate_coverage_badge.py  validate_worker_browser.py
storage/: __init__.py  base_scrape_queue.py  data_storage.py  database.py  db_connection.py  db_instance.py  demo_scrape_queue.py  map_scrape_queue.py  match_scrape_queue.py  models.py  schema.sql
tests/: __init__.py  support.py  test_cli.py  test_database.py  test_demo_scraper.py  test_deployment_smoke.py  test_exceptions.py  test_generate_coverage_badge.py  test_match_parser_manual.py  test_match_scraper.py  test_match_scraper_manual.py  test_results_scraper.py  test_run_api.py  test_validate_worker_browser.py
utils/: __init__.py  initialize_db.py  log_manager.py  queue_helpers.py  schema.sql
(+66 files in other folders)
